fixed the issue of bgimage not stretch all the way

--- a/client/src/components/Jumbotron/style.css
+++ b/client/src/components/Jumbotron/style.css
@@ -9,10 +9,10 @@
 
 .bg-image {
     background: url("../../images/plants.jpg") no-repeat fixed;
-    -webkit-background-size: contain;
-    -moz-background-size: contain;
-    -o-background-size: contain;
-    background-size: contain;
+    -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
     /* margin-bottom: 15vh; */
     padding-bottom: 15vh;
     position: relative;
