--- a/client/src/components/Wrapper/style.css
+++ b/client/src/components/Wrapper/style.css
@@ -1,4 +1,4 @@
 .wrapper {
     background-color: #c7c5b1;
-    height: 100%;
+    width: 100%;
 }
